<resources>
    <string name="app_name">BooCha</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="reader">Reader</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="e_mail">E-mail</string>
    <string name="create_a_new_account_for_boocha">Create a new account for BooCha</string>
    <string name="sign_up">Sign Up</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="generic_error_message">Something went wrong!</string>
    <string name="ok">OK</string>
    <string name="your_account_has_been_created_successfully">Your account has been created successfully.</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add">Add</string>
    <string name="waiting_for_swap">Waiting for swap</string>
    <string name="search_for_books">Search for books</string>
    <string name="book_status">Book Status</string>
    <string name="add_book">Add Book</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="click_for_choosing_book">Click for choosing book</string>
    <string name="choose_your_book">Choose your book</string>
    <string name="not_good">Not Good</string>
    <string name="good">Good</string>
    <string name="perfect">Perfect</string>
    <string name="author_variable">Author: %1$s</string>
    <string name="publisher_variable">Publisher: %1$s</string>
    <string name="page_variable">Page: %1$s</string>
    <string name="date_variable">Published Date: %1$s</string>
    <string name="book_status_variable">Book Status: %1$s</string>
    <string name="opps">Opps!</string>
    <string name="we_did_not_found_this_book_for_swap">Sorry, we didn\'t found this book for swap.</string>
    <string name="book_description">Book Description</string>
    <string name="other_informations">Other Informations</string>
    <string name="users_who_own_this_book">Users who own this book</string>
    <string name="no_description_available">No description available.</string>
    <string name="owner_s_description">Owner\'s description</string>
    <string name="send_swap_request">Send Swap Request</string>
    <string name="sign_out">Sign Out</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text_message">Text Message</string>
    <string name="send">Send</string>
    <string name="messages">Messages</string>
    <string name="no_result">No Result</string>
    <string name="add_for_swap">Add For Swap</string>
    <string name="add_for_library">Add For Library</string>
    <string name="what_are_you_adding_for">What Are You Adding For?</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="where_did_you_get_this_book">Where Did You Get This Book?</string>
    <string name="from_boocha">From BooCha</string>
    <string name="from_others">From Others</string>
    <string name="this_book_was_taken_from_boo_cha">This book was taken from BooCha.</string>
</resources>
