<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:background="@android:color/white"
            app:elevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvBookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/text_color_dark_gray"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                tools:text="Book name" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tvBookDescriptionHelper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_xlarge"
            android:layout_marginEnd="@dimen/space_large"
            android:maxLines="1"
            android:text="@string/book_description"
            android:textColor="@color/text_color_dark_gray"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBookDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_small"
            android:layout_marginEnd="@dimen/space_large"
            android:orientation="horizontal"
            app:cardBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBookDescriptionHelper">

            <TextView
                android:id="@id/tvBookDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_large"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/text_small"
                tools:text="Book description Book description Book description Book description Book description Book description Book description Book description Book description Book description Book description Book description Book description " />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvOtherInformationsHelper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_xlarge"
            android:layout_marginEnd="@dimen/space_large"
            android:maxLines="1"
            android:text="@string/other_informations"
            android:textColor="@color/text_color_dark_gray"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvBookDescription" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvOtherInformations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_small"
            android:layout_marginEnd="@dimen/space_large"
            android:orientation="horizontal"
            app:cardBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOtherInformationsHelper">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_large">

                <TextView
                    android:id="@+id/tvAuthorName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/text_color_gray"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Author: Author name" />

                <TextView
                    android:id="@+id/tvBookPublisher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_small"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/text_color_gray"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAuthorName"
                    tools:text="Publisher: Publisher name" />

                <TextView
                    android:id="@+id/tvPageCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_small"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/text_color_gray"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBookPublisher"
                    tools:text="Page: 100" />

                <TextView
                    android:id="@+id/tvPublishDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_small"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/text_color_gray"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPageCount"
                    tools:text="Publish Date: 01.01.2019" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvRecyclerViewHelper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_xlarge"
            android:layout_marginEnd="@dimen/space_large"
            android:maxLines="1"
            android:text="@string/users_who_own_this_book"
            android:textColor="@color/text_color_dark_gray"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvOtherInformations" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOwnerUsers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_small"
            android:layout_marginEnd="@dimen/space_large"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRecyclerViewHelper" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>